--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@popperjs/core": "^2.11.8",
         "animate.css": "^4.1.1",
         "apexcharts": "^3.50.0",
+        "bcrypt": "^5.1.1",
         "blueimp-canvas-to-blob": "^3.29.0",
         "blueimp-file-upload": "^10.32.0",
         "blueimp-gallery": "^3.4.0",
@@ -44,6 +45,7 @@
         "bootstrap-table": "^1.23.0",
         "bootstrap-timepicker": "^0.5.2",
         "chart.js": "^4.4.3",
+        "composer": "^4.1.0",
         "datatables.net": "^2.0.8",
         "datatables.net-autofill": "^2.7.0",
         "datatables.net-autofill-bs5": "^2.7.0",
